1.10	Oct 23th, 2008
	- Remove record.dma_code -- use recod.metro_code instead. ( Boris Zentner )
1.9	Oct 22th, 2008
	- Add new static class RegionName. use RegionName.getRegionName("FR", "02") to get the region name. rec.regionName does work for city records ( Boris Zentner )
1.8	May 6th, 2008
	- remove duplicate getID functions using swapbytes in flavor of bytestoLong (Boris Zentner)

1.7	March 18th, 2008
	- Changed license from GPL to LGPL
	- Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
	- getCountry method works with GeoIP City as well as GeoIP Country (Frank Mather)
	
1.6	February 20th, 2007
	- Added AX/Aland Islands, GG/Guernsey, IM/Isle of Man, JE/Jersey (ISO-3166-1 changes)
	- Replaced CS/Serbia and Montenegro with RS/Serbia, removed ZR/Zaire, added ME/Montenegro
	- Replaced swapbytes(addr.Address) with bytestoLong(addr.GetAddressBytes())
		since IPAddress.Address property was deprecated in .NET 2.0
		(Malcolm van Raalte / GeoSign)
	- TP/East Timor changed to TL/Timor-Leste, reflecting changes in ISO-3166

1.5	January 19th, 2006
	- Added support for GeoIP Netspeed lookups (Frank Mather)
	- Replaced Yugoslavia with Serbia and Montenegro

1.4	December 18th, 2004
	- Added GEOIP_MEMORY_CACHE option (Frank Mather)

1.3	November 10th, 2004
	- Fixed City Database lookup (Frank Mather)

1.2	November 2nd, 2004
	- Fixed problem with postalCode, city and region fields
	  returning null char (Frank Mather)

1.1	October 6th, 2004
	Added swapbytes function, fixed lookup issues (Frank Mather)

1.0	July 23rd, 2004
	Initial Release