@@ -1,3 +1,4 @@
+	- Sync RegionName.cs with more recent FIPS codes. ( Boris Zentner )
 1.10	Oct 23th, 2008
 	- Remove record.dma_code -- use recod.metro_code instead. ( Boris Zentner )
 1.9	Oct 22th, 2008
